k8s/00-wikibase-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wikibase
  labels:
    name: wikibase
