k8s/40-elasticsearch-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
  namespace: wikibase
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms512m -Xmx512m
        - name: discovery.type
          value: single-node
        image: wikibase/elasticsearch:5.6.14-extra
        name: elasticsearch
        ports:
        - containerPort: 9200
          name: elasticsearch
        resources:
          requests:
            memory: "768Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            # cpu: "100m"
      restartPolicy: Always
status: {}
