k8s/50-wikibase-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: wikibase
  name: wikibase
  namespace: wikibase
spec:
  selector:
    matchLabels:
      app: wikibase
  serviceName: "wikibase"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: wikibase
      annotations:
    spec:
      containers:
      - name: wikibase
        image: wikibase/wikibase:1.32-bundle
        # imagePullPolicy: Never
        resources:
          requests:
            cpu: "300m"
            memory: "300Mi"
        volumeMounts:
        - mountPath: /var/www/html/images
          name: mediawiki-images-data
        volumeMounts:
        - mountPath: /quickstatements/data
          name: quickstatements-data
  volumeClaimTemplates:
  - metadata:
      name: mediawiki-images-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: wikibase-mediawiki-images-data
      resources:
        requests:
          storage: 5Gi
  volumeClaimTemplates:
  - metadata:
      name: quickstatements-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: wikibase-quickstatements-data
      resources:
        requests:
          storage: 5Gi
