k8s/60-wdqs-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wdqs
  namespace: wikibase
spec:
  selector:
    matchLabels:
      app: wdqs
      storage: persistent
  serviceName: "wdqs"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: wdqs
        storage: persistent
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: wdqs
        image: wikibase/wdqs:0.3.0
        args:
        - /runBlazegraph.sh
        ports:
        - containerPort: 9999
          name: sparql
        resources:
          requests:
            cpu: "100m"
            memory: "4Gi"
        volumeMounts:
        - mountPath: /wdqs/data
          name: wdqs-data
      - name: wdqs-proxy
        image: wikibase/wdqs-proxy
        ports:
        - containerPort: 80
          name: "http"
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
      - image: wikibase/wdqs:0.3.0
        name: wdqs-updater
        args:
        - /runUpdate.sh
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
  volumeClaimTemplates:
  - metadata:
      name: wdqs-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: wikibase-wdqs
      resources:
        requests:
          storage: 5Gi
